@@ -1,5 +1,12 @@
 2005-02-15	Benedikt Meurer <benny@xfce.org>
 
+	* exo.spec.in: Do not include the API docs with the exo-devel package,
+	  but instead, use a exo-docs package.
+	* exo.spec.in: Do not depend on D-BUS any longer.
+	* exo.spec.in: Add --enable-final as configure parameter.
+
+2005-02-15	Benedikt Meurer <benny@xfce.org>
+
 	* docs: Restructured.
 
 2005-02-15	Benedikt Meurer <benny@xfce.org>
